[gd_scene load_steps=11 format=3 uid="uid://bdk3uwl6fb7m5"]

[ext_resource type="Script" uid="uid://cbf0x48ucu0hb" path="res://login.gd" id="1_6hqeh"]
[ext_resource type="Texture2D" uid="uid://bo47sadxi8aap" path="res://images/explosif-menu.png" id="1_cau7c"]
[ext_resource type="Texture2D" uid="uid://df684aylq87c4" path="res://images/logo_bomber_code.png" id="2_xlo4h"]
[ext_resource type="Texture2D" uid="uid://bqr0x0vgteobg" path="res://images/panel_login.png" id="3_bvvwm"]
[ext_resource type="Texture2D" uid="uid://bfpyfga1cp3t3" path="res://images/connection.png" id="5_ma4wh"]
[ext_resource type="Texture2D" uid="uid://040s31jwqple" path="res://images/connexion_select.png" id="6_0s12h"]
[ext_resource type="Texture2D" uid="uid://cw88r3jybqwcd" path="res://images/inscription.png" id="7_0trqi"]
[ext_resource type="Texture2D" uid="uid://dwdubu071cqny" path="res://images/inscription_select.png" id="8_xwwoh"]
[ext_resource type="Texture2D" uid="uid://bccpwr1663wyt" path="res://images/guest.png" id="9_0trqi"]
[ext_resource type="Texture2D" uid="uid://cw8xshcrj2ef8" path="res://images/guest_select.png" id="10_xwwoh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hqeh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -91.0
offset_right = 213.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cau7c")
expand_mode = 1
stretch_mode = 4

[node name="BomberCode" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -249.0
offset_top = -68.0
offset_right = 251.0
offset_bottom = 290.0
grow_horizontal = 2
texture = ExtResource("2_xlo4h")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.0
offset_top = 203.0
offset_right = 169.0
offset_bottom = 594.0
grow_horizontal = 2
texture = ExtResource("3_bvvwm")
stretch_mode = 5

[node name="connexion_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 554.0
offset_right = 565.0
offset_bottom = 631.0
texture_normal = ExtResource("5_ma4wh")
texture_hover = ExtResource("6_0s12h")
ignore_texture_size = true
stretch_mode = 5

[node name="inscription_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 586.0
offset_top = 551.0
offset_right = 740.0
offset_bottom = 632.0
texture_normal = ExtResource("7_0trqi")
texture_hover = ExtResource("8_xwwoh")
ignore_texture_size = true
stretch_mode = 5

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 334.0
offset_right = 718.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Login"
flat = true

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 457.0
offset_right = 718.0
offset_bottom = 499.0
theme_override_font_sizes/font_size = 24
placeholder_text = "Password"
flat = true

[node name="Guest" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 554.0
offset_right = 918.0
offset_bottom = 631.0
texture_normal = ExtResource("9_0trqi")
texture_hover = ExtResource("10_xwwoh")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="Guest" to="." method="_on_guest_pressed"]
